# novax

./: .clang-format  .gitignore  .gitmodules  .gitmodules_0  CMakeLists.txt  LICENSE  README.md  a.out  build.sh  build.txt  design.txt
code/: CMakeLists.txt
code/include/: definitions.h
code/include/comm/: log.hpp
code/include/log/: log.hpp
code/src/comm/: log.hpp
code/src/reactor/: CMakeLists.txt  msg.h  reactor.cpp  reactor.h
code/utils/: CMakeLists.txt
docs/: design.txt
include/: application.h  aspect.h  calendar.h  candle.h  clock.h  config.h  context.h  cub.h  data.h  definitions.h  indicator.h  kline.h  log.hpp  models.h  msg.h  novax.h  ns.h  position.h  proxy.h  pub.h  quant.h  reactor.h  series.h  strategy.h  utils.h  utils.hpp
include/comm/: algo.h  candle.h  clock.h  datetime.h  definitions.h  ns.h  utils.h
include/data/: data.h
include/reactor/: msg.h  reactor.h
lib/: rapidjson
lib/ctp/: DataCollect.h  ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.dtd  error.xml
lib/ctp/internal/v6.7.0_20230209_api_linux/: DataCollect.h
lib/gtest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
lib/sqlite/: CMakeLists.txt  version
lib/zmq/: master
src/app/: CMakeLists.txt  application.h  ba.cpp  bull.cc  dc.cli.cc  dc.srv.cc  main.cpp
src/app/dc/: main.cpp
src/comm/: algo.h  candle.h  canlendar.cpp  clock.h  datetime.h  definitions.h  log.hpp  utils.h
src/core/: CMakeLists.txt  algo.cpp  algo.h  algo_repo.h  application.cpp  application.h  aspect.cpp  aspect.h  calendar.cpp  calendar.h  candle.h  canlendar.cpp  canlendar.h  clock.cpp  clock.h  config.cpp  context.cpp  context.h  context_impl.h  contextimpl.h  data.cpp  data.h  data_center.cpp  data_center.h  datacenter.cpp  datacenter.h  datacenter0.cpp  datacenter1.cpp  datetime.h  dbagent.cpp  dbagent.h  dci_role.h  definitions.h  indicator.cpp  indicator.h  kline.cpp  kline.h  log.hpp  market.cpp  market.h  (+38 more)
src/core/algos/: all.h  klines.cpp  klines.h  ma.cpp  ma.h  repo.h
src/core/ctp/: cal.json  clock.h  comm.cpp  comm.h  ctp.cal.json  ctp_ids.h  ctp_md.json  ctp_md_proxy.cpp  ctp_md_proxy.h  ctp_proxy.cpp  ctp_trade.json  ctp_trade_proxy.cpp  ctp_trade_proxy.h  ctpids.h  gateway.h  instrument.cpp  instruments.csv  mdproxy.cpp  mdproxy.h  simnow.txt  synchrony.hpp  trade.json  tradeproxy.cpp  tradeproxy.h
src/core/gallery/: break_through.cpp  break_through.h  m_maker.cpp  m_maker.h  ma_cross.h
src/data/: CMakeLists.txt  a.out  canlendar.h  ctp_md.json  ctp_proxy.cpp  ctp_proxy.h  cub-trade.code-workspace  cub.code-workspace  data.cpp  data.h  indicator.cpp  indicator.h  market.cpp  market.h  test.data.cpp
src/data/algo/: algo.cpp  algo.h  klines.h  ma.cpp
src/dataserver/: datasource.h
src/dataserver/ctp/: instrument.cpp  instrument.h  mdproxy.cpp  mdproxy.h  soruce.cpp  source.h  tradeproxy.cpp  tradeproxy.h
src/deprcated/: datacenter.h  datacenter0.cpp  datacenter1.cpp  dbagent.h
src/gallery/: break_through.cpp  break_through.h  bullin.h  m_maker.cpp  m_maker.h  ma_cross.h  test.strategy.h
src/include/: calendar.h  indicator.h  kline.h  series.h
src/indicator/: aspect.h
src/indicator/cluster/: klines.h  ma.h
src/reactor/: msg.h  reactor.cpp  reactor.h  service.h  test.pub.cpp
src/strategy/: strategy.h
src/test/: CMakeLists.txt  a.out  client  reactor.h  t.event  test.data.cpp  test.dc.client.cc  test.kline.cpp  test.lang  test.lang.cpp  test.omgmt.cpp  test.pub.cpp  test.ringbuff.cpp
src/test/cases/: CMakeLists.txt  main.cpp  ut.calendar.cpp  ut.clock.cpp  ut.code.cpp  ut.ctpid.cpp  ut.kline.cpp  ut.lockable.cpp  ut.messageq.cpp  ut.ordermgmt.cpp  ut.ringbuffer.cpp  ut.series.cpp
src/test/int-cases/: 3  CMakeLists.txt  a.out  reactor.h  reactor_impl.cpp  reactor_impl.h  test.any.cpp  test.aspect.kline.cpp  test.creator.cpp  test.data.cpp  test.dc.client.cc  test.encaps.cpp  test.indi.cpp  test.indicator.cpp  test.kline.cpp  test.lang.cpp  test.libevent.cpp  test.log.cpp  test.macro.cpp  test.omgmt.cpp  test.pub.cpp  test.ringbuff.cpp  test.series.cpp  test.spinner.cc  test.thread.cpp  timer.h  typesize.cpp
src/test/int-cases/tmp/: test.log.1  testlog
src/trader/: order.h
trader/: ns.h  order_mgnt.h  reactor.h  strategy.h
trader/src/: reactor.h  strategy.h
